# git-wise

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
Formula/: git-wise.rb
debian/: control
git_wise/: cli.py
git_wise/models/: git_models.py
git_wise/utils/: exceptions.py  git_utils.py
src/git_wise/: cli.py
src/git_wise/core/: analyzer.py  generator.py
src/git_wise/utils/: git_utils.py
