[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-wise"
version = "0.1.1"
description = "AI-powered Git commit message generator"
readme = "README.md"
authors = [{ name = "creeponsky", email = "creeponsky@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["git", "commit", "AI", "OpenAI"]
dependencies = [
    "click~=8.1.7",
    "rich~=13.9.2",
    "gitpython~=3.1.43",
    "openai~=1.52.0",
    "pyyaml~=6.0.2",
    "PyGithub~=2.4.0",
    "questionary~=2.0.1",
    "tiktoken~=0.8.0",
    "pyperclip~=1.9.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
git-wise = "git_wise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_wise*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=git_wise"
testpaths = [
    "tests",
]
